# inventory_mvp

./: .Dockerignore  .entrypoint.sh  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  backup.json  db.sqlite3  docker-compose.yml  entrypoint.sh  initial_data.json  main.py  pyproject.toml  setup.sh  verify_setup.py
apps/common/: bunny.py  storage.py  utils.py
apps/company/: admin.py  models.py
apps/company/migrations/: 0001_initial.py
apps/company/models/: company.py
apps/inventory/: admin.py  context_processors.py  models.py  urls.py  views.py
apps/inventory/migrations/: 0002_category_active_category_created_at_and_more.py  0003_alter_supplier_options_supplier_active_and_more.py
apps/inventory/models/: __init__.py  (+3 more)
apps/profiles/: admin.py  models.py  urls.py  utils.py  views.py
config/: settings.py  urls.py
inventory/: admin.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py
inventory/models/: __init__.py  compras.py  inventory.py  transactions.py
media/: README.md
media/employee_photos/: henry-cavill.avif
static/: .gitkeep
static/css/: activate_account.css  base.css  login.css
templates/: 403.html  base.html  bases.html  dashboard.html  login.html  navbar.html  sidebar.html
templates/inventory/: form.html  list.html  print_label.html
templates/partials/: inventory_table.html  purchases_table.html  transactions_table.html
templates/profiles/: edit.html  employee_list.html
templates/purchases/: create.html  detail.html  list.html
templates/requisitions/: create.html  detail.html  list.html
(+47 files in other folders)
