[project]
name = "disitech-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "pillow>=12.1.0",
    "psycopg[binary]>=3.2.3",
    "python-environ>=0.4.54",
    "gunicorn>=23.0.0",
    "whitenoise>=6.12.0",
    "requests>=2.32.5",
]
